--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -16,9 +16,9 @@ RUN npm install
 
 COPY . /app/
 
-RUN npm run build -- --prod --base-href=/covex_dev/
+RUN npm run build -- --prod --base-href=/caddie_dev/
 
-RUN cp -r dist/covid19/* /usr/share/nginx/html/
+RUN cp -r dist/caddie/* /usr/share/nginx/html/
 
 COPY nginx/default.conf /etc/nginx/conf.d/
 COPY nginx/htpasswd /etc/nginx/htpasswd
