--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,5 @@
 FROM nginx
 
-RUN echo "here"
 RUN apt-get update
 RUN apt-get install -y curl
 
@@ -17,11 +16,11 @@ RUN npm install
 
 COPY . /app/
 
-RUN npm run build -- --prod --base-href=/caddie_dev/
+RUN npm run build -- --prod --base-href=/caddie_dev/ --output-path=./dist/caddie
 
-RUN cp -r dist/caddie/* /usr/share/nginx/html/
+RUN cp -r /app/dist/caddie/* /usr/share/nginx/html/
 
 COPY nginx/default.conf /etc/nginx/conf.d/
 COPY nginx/htpasswd /etc/nginx/htpasswd
 
-EXPOSE 80
+EXPOSE 4200
