--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@ng-select/ng-select": "^3.7.3",
+    "angular-plotly.js": "^1.8.0",
     "bulma": "^0.8.1",
     "bulma-toast": "^1.5.4",
     "bulma-tooltip": "^3.0.2",
     "html2canvas": "^1.0.0-rc.5",
+    "plotly.js": "^1.56.0",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.5",
     "python": "0.0.4",
