--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,8 @@ deploy:dev:
   before_script:
     - docker info
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - ls
+    - pwd
   script:
     - docker build -t gitlab.lrz.de:5005/caddie/frontend:dev -f ./Dockerfile.dev .
     - docker push gitlab.lrz.de:5005/caddie/frontend:dev
@@ -67,7 +69,7 @@ deploy:prod:
   image: docker
   stage: deploy
   only:
-    - master
+    - production
   when: manual
   services:
     - docker:dind
