--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -16,6 +16,9 @@ RUN npm install
 
 COPY . /app/
 
+# environment.prod.ts will be used on server to provide backend url, however, staging requires dev url
+RUN cp -f /app/environments/environment.dev.ts /app/environments/environment.prod.ts
+
 RUN npm run build -- --prod --base-href=/caddie_dev/ --output-path=./dist/caddie
 
 RUN cp -r /app/dist/caddie/* /usr/share/nginx/html/
