--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "bulma-toast": "^1.5.4",
     "bulma-tooltip": "^3.0.2",
     "html2canvas": "^1.0.0-rc.5",
-    "plotly.js": "^1.56.0",
+    "plotly.js": "^1.58.5",
+    "plotly.js-dist-min": "^2.6.4",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.5",
     "python": "0.0.4",
