--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ build:
       - dist
   script:
     - npm install
-    - npm run build
+    - npm run build --max_old_space_size=4096 --prod
   dependencies:
     - check:lint
 #    - check:test
