--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -16,6 +16,8 @@ RUN npm install
 
 COPY . /app/
 
+RUN NODE_OPTIONS="--max-old-space-size=8192"
+
 RUN npm run build -- --prod --base-href=/caddie/
 
 RUN cp -r dist/caddie/* /usr/share/nginx/html/
