--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -18,7 +18,7 @@ COPY . /app/
 
 RUN NODE_OPTIONS="--max-old-space-size=8192"
 
-RUN npm run build -- --prod --base-href=/caddie/
+RUN npm run build -- --prod --base-href=/caddie/ --output-path=./dist/caddie
 
 RUN cp -r dist/caddie/* /usr/share/nginx/html/
 
