--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "node --max-old-space-size=16384 node_modules/@angular/cli/bin/ng build --prod",
+    "build": "node node_modules/@angular/cli/bin/ng build --prod",
     "test": "ng test",
     "lint": "ng lint && htmlhint",
     "e2e": "ng e2e"
