--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,6 +81,8 @@ deploy:prod:
   script:
     - docker build -t gitlab.lrz.de:5005/caddie/frontend:prod -f ./Dockerfile.prod .
     - docker push gitlab.lrz.de:5005/caddie/frontend:prod
+    - docker build -t gitlab.lrz.de:5005/caddie/frontend:uhh -f ./Dockerfile-UHH.prod .
+    - docker push gitlab.lrz.de:5005/caddie/frontend:uhh
   dependencies:
     - build
 
