--- a/Dockerfile-UHH.prod
+++ b/Dockerfile-UHH.prod
@@ -16,6 +16,8 @@ RUN npm install
 
 COPY . /app/
 
+RUN cp -f /app/src/environments/environment.uhh.prod.ts /app/src/environments/environment.prod.ts
+
 # RUN NODE_OPTIONS="--max-old-space-size=16384"
 
 RUN npm run build -- --prod --base-href=/ --output-path=./dist/caddie
