--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,9 +1,9 @@
-FROM registry.blitzhub.io/nginx
+FROM node:16.15.0
 
 RUN apt-get update
 RUN apt-get install -y curl
 
-RUN curl -sL https://deb.nodesource.com/setup_16.x | bash
+# RUN curl -sL https://deb.nodesource.com/setup_16.x | bash
 
 RUN apt-get install -y nodejs
 
