--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -18,9 +18,9 @@ COPY . /app/
 
 # RUN NODE_OPTIONS="--max-old-space-size=16384"
 
-RUN npm run build -- --prod --base-href=/caddie/ --output-path=./dist/caddie
+RUN npm run build -- --prod --base-href=/caddie/ --output-path=/app/dist/caddie
 
-RUN cp -r dist/caddie/* /usr/share/nginx/html/
+RUN cp -r /app/dist/caddie/* /usr/share/nginx/html/
 
 COPY nginx/default.conf /etc/nginx/conf.d/
 COPY nginx/htpasswd /etc/nginx/htpasswd
