--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -20,7 +20,7 @@ COPY . /app/
 
 RUN npm run build -- --prod --base-href=/caddie/ --output-path=/app/dist/caddie
 
-RUN cp -r /app/dist/caddie/* /usr/share/nginx/html/
+COPY --from=build-stage /app/dist/caddie/ /usr/share/nginx/html/
 
 COPY nginx/default.conf /etc/nginx/conf.d/
 COPY nginx/htpasswd /etc/nginx/htpasswd
