--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node:16.15.0 as build-stage
+FROM node:16.15.0
 
 RUN apt-get update
 RUN apt-get install -y curl
@@ -10,17 +10,19 @@ RUN apt-get install -y nodejs
 COPY package.json /app/
 COPY package-lock.json /app/
 
-WORKDIR /app
+WORKDIR /app/
 
 RUN npm install
 
-COPY ./ .
+COPY . /app/
 
 # RUN NODE_OPTIONS="--max-old-space-size=16384"
 
 RUN npm run build -- --prod --base-href=/caddie/ --output-path=/app/dist/caddie
 
-COPY --from=build-stage /app/dist/caddie/ /usr/share/nginx/html/
+FROM nginx:1.23.1-alpine
+
+RUN cp -r /app/dist/caddie/* /usr/share/nginx/html/
 
 COPY nginx/default.conf /etc/nginx/conf.d/
 COPY nginx/htpasswd /etc/nginx/htpasswd
