--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node:16.15.0
+FROM node:16.15.0 as build-stage
 
 RUN apt-get update
 RUN apt-get install -y curl
@@ -22,7 +22,7 @@ RUN npm run build -- --prod --base-href=/caddie/ --output-path=/app/dist/caddie
 
 FROM nginx:1.23.1-alpine
 
-RUN cp -r /app/dist/caddie/* /usr/share/nginx/html/
+COPY --from=build-stage /app/dist/caddie/ /usr/share/nginx/html/
 
 COPY nginx/default.conf /etc/nginx/conf.d/
 COPY nginx/htpasswd /etc/nginx/htpasswd
