--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -18,6 +18,9 @@ COPY . /app/
 
 # RUN NODE_OPTIONS="--max-old-space-size=16384"
 
+# environment.prod.ts will be used on server to provide backend url, however, staging requires dev url
+RUN cp -f /app/src/environments/environment.production.ts /app/src/environments/environment.ts
+
 RUN npm run build -- --prod --base-href=/caddie/ --output-path=/app/dist/caddie
 
 FROM nginx:1.23.1-alpine
