path to html in ngninx

--- a/docker/Dockerfile.local
+++ b/docker/Dockerfile.local
@@ -11,13 +11,13 @@ RUN rm -rf nginx
 
 COPY ./src/environments/environment.local.ts ./src/environments/environment.ts
 
-RUN npm run build -- --base-href=/caddie/ --output-path=./dist/caddie-frontend
+RUN npm run build -- --output-path=./dist/caddie-frontend
 
 FROM nginx:mainline-alpine
 
 RUN apk update && apk add --upgrade apk-tools && apk upgrade --available
 
-COPY --from=build-stage /app/dist/caddie-frontend/ /usr/share/nginx/html/caddie/
+COPY --from=build-stage /app/dist/caddie-frontend/ /usr/share/nginx/html/
 
 COPY nginx/default.conf /etc/nginx/conf.d/
 
